--- a/src/public/css/header.css
+++ b/src/public/css/header.css
@@ -2,6 +2,7 @@
 
 header {
   width: 100vw;
+  position: fixed;
 }
 
 .header {
@@ -11,30 +12,31 @@ header {
   margin: 0 auto;
 }
 
-.header_area {
+.header-area {
   height: 50px;
   width: 100px;
   margin: 20px 0;
 }
 
-.header_left_area {
+.header-left-area {
   margin: 20px 64px 20px 0;
 }
 
-.header_right_area {
+.header-right-area {
   margin: 20px 0 20px 64px;
 }
 
-.header_image {
+.header-image {
   height: 50px;
+  width: auto;
   margin: auto 0;
 }
 
-.header_nav {
+.header-nav {
   margin: auto 0;
 }
 
-.header_nav .header_link {
+.header-nav .header-link {
   font-size: 24px;
   margin: 0 32px;
 }
